--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,33 @@ body {
   font-family:  "Poppins","Roboto Slab", sans-serif;
   font-size: 16px;
 }
+
+.clip-arrow {
+  clip-path: polygon(100% 0, 100% 100%, 0 50%);
+}
+
+@keyframes scrollLeft {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes scrollRight {
+  from {
+    transform: translateX(-50%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.animate-scrollLeft {
+  animation: scrollLeft 10s linear infinite;
+}
+
+.animate-scrollRight {
+  animation: scrollRight 10s linear infinite;
+}
