--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,12 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Roboto+Slab:wght@100..900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 :root {
   --background: #ffffff;
@@ -27,8 +30,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family:  "Poppins","Roboto Slab", sans-serif;
+  /* font-family:  "Poppins","Roboto Slab", sans-serif; */
   font-size: 16px;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
+  font-family: 'Bricolage Grotesque', sans-serif;
 }
 
 .clip-arrow {
