--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,14 @@ body {
 .animate-scrollRight {
   animation: scrollRight 10s linear infinite;
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
+}
